# PyCalc

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CalcTest.cpp  Dimension.cpp  Dimension.h  DimensionTest.cpp  Language.lex  Language.y  LanguageStructures.cpp  LanguageStructures.h  Macros.h  poscUnits22.xml  test.calc
